# pytrix

./: # O comando que faz a mágica:  .gitignore  .helpvim  .pytrix_env  .pytrix_env_generic  Dockerfile  README.md  Select_language  app.py  bc4aac8b-a247-47ac-b5e7-8f8c9bdc49b2.json  bip  build_docs.py  commit_teste.py  converter_xml.py  docker-compose.yml  docker.sh  function gencode() {  import ollama  main_jarvis.py  pyclass_prefab.py  pyprefab_components.py  pyproject.toml  pyrightconfig.json  python-pytrix.sh  pytrix.py  pytrix_ai_watcher.py  pytrix_brain_watcher  pytrix_clean.sh  pytrix_commits_auto.sh  pytrix_core.py  pytrix_docker_compose.yml  pytrix_docker_up.sh  pytrix_dump.txt  pytrix_dumto_all.py  pytrix_forge_utils.py  pytrix_launcher.sh  pytrix_name_suggestion.py  pytrix_prefab_class.py  pytrix_prefab_mvc_i18n.py  pytrix_requirements.txt  (+7 more)
controllers/: controllers_select_language.py
data/: database.sqlite
docs/: index.html  search.js
models/: model_base.py  model_select_language.py
pytrix.egg-info/: PKG-INFO  SOURCES.txt
pytrix_bin/: px-code
pytrix_controllers/: bip.c  pytrix_brain_watcher.c  pytrix_controllers_select_language.py  pytrix_validator.py
pytrix_core/: app.py  pytrix.py  pytrix_core.py
pytrix_docker/: .tmux.conf  .vimrc  .zshrc  Dockerfile.dev  Dockerfile.tunnel
pytrix_docs/: README.md
pytrix_i18n/: i18n.py
pytrix_models/: pytrix_model_--name.py  pytrix_model_base.py  pytrix_model_select_language.py
pytrix_protocol/: __init__.py  app-api.py  appapi.py  cert.pem  cloudflareresponse  docker-compose.tunnel.yml  jarvis_stt.py  (+6 more)
(+82 files in other folders)
