[project]
name = "pytrix"
version = "0.1.0"
description = "Ecossistema Pytrix"

[project.scripts]
pytrix = "pytrix:main"

[tool.setuptools]
py-modules = ["pytrix"] # <--- Isso força o reconhecimento do arquivo pytrix.py
packages = ["pytrix_utils", "pytrix_models", "pytrix_controllers", "pytrix_views", "pytrix_i18n"]